examples/typeError/typeErrorInTermDest2.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : NatList -> NatList
f x = .tail (.head x)
